--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^0.19.2",
+    "download": "^8.0.0"
   }
 }
