--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "employee-directory",
   "version": "0.1.0",
+  "homepage": "https://SierraChapman.github.io/employee-directory",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -14,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,6 +36,7 @@
   },
   "devDependencies": {
     "axios": "^0.19.2",
-    "download": "^8.0.0"
+    "download": "^8.0.0",
+    "gh-pages": "^3.1.0"
   }
 }
